--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
-.App {
+.app {
   text-align: center;
+  width: 100%;
 }
+
+.app_content {
+  width: 100%;
+}
+
+.app_content .inner_content{
+  margin: auto;
+  max-width: 1100px;
+}
+
